# spotify-api-project

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: sync_main_to_ec2.yml
airflow/: .dockerignore  Dockerfile  README.md  docker-compose.yaml  requirements.txt
airflow/dags/: README.md  fetch_playlist_data.py  fetch_spotify_data_from_api.py  load_spotify_data_into_database.py  process_playlist_data.py  process_spotify_data.py  run_dbt_project.py
airflow/dbt/: README.md  pyproject.toml
airflow/dbt/global_dbt_macros/: generate_schema_name.sql  test_not_empty.sql
airflow/dbt/spotify_dbt_project/: README.md  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
airflow/dbt/spotify_dbt_project/models/presentation_tables/: artist_genre_and_popularity_summary_t1.sql  playlist_genre_summary_t1.sql  presentation_tables.yml  track_genre_and_popularity_summary_t1.sql
airflow/dbt/spotify_dbt_project/models/presentation_views/: artist_genre_and_popularity_summary_v1.sql  playlist_genre_summary_v1.sql  presentation_views.yml  track_genre_and_popularity_summary_v1.sql  track_genre_summary_v1.sql
airflow/dbt/spotify_dbt_project/models/staging/: README.md  staging.yml  stg_dim_artist_genres.sql  stg_dim_artists.sql  stg_dim_playlists.sql  stg_dim_track_artists.sql  stg_dim_tracks.sql  stg_fact_artist_popularity.sql  stg_fact_track_popularity.sql
airflow/dbt/spotify_dbt_project/seeds/: seed__genre_categories__2025_08_20.csv
airflow/dbt/spotify_dbt_project/sources/: spotify_sources.yml
dbt/: README.md
(+13 files in other folders)
