[tool.poetry]
package-mode = false

[project]
name = "spotify-api-project"
version = "0.1.0"
description = ""
authors = [
    {name = "pmartin-git",email = "p.martin.9089@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "dbt (>=1.0.0.40.5,<2.0.0.0.0)",
    "dbt-core (>=1.10.9,<2.0.0)",
    "dbt-postgres (>=1.9.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
